EDUPROV: 22-05-2021 make url's human friendly and move css from service.css to style.css

--- a/blogs/eduprov-courses-list.html
+++ b/blogs/eduprov-courses-list.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Course Information Exam Details Scope and Links | EDUPROV</title>
+  <title>Course Information Exam Details Scope and Links | Eduprov</title>
   <meta name="description" content="
     " />
   <meta name="keywords" content="
@@ -72,7 +72,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/blogs/medical.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">MEDICAL</label>
@@ -88,7 +88,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/blogs/engineering.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">ENGINEERING</label>
@@ -104,7 +104,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/blogs/mba.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">MBA </label>
@@ -121,7 +121,7 @@
 
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/blogs/law.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/blogs/eduprov-law-course-information.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">LAW</label>
@@ -138,7 +138,7 @@
         </div>
         <div class="col-md-4" id="callback">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/blogs/arts-humanities.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Arts or Humanities</label>
@@ -154,7 +154,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/blogs/commerce.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/blogs/eduprov-commerce-course-information.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Commerce</label>
@@ -173,7 +173,7 @@
 
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/blogs/designing.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Designing</label>
@@ -189,7 +189,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/blogs/education.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/blogs/eduprov-education-course-information.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Education</label>
@@ -205,7 +205,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/blogs/para-medical.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/blogs/eduprov-para-medical-course-information.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Para-Medical</label>
@@ -221,7 +221,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/blogs/science.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/blogs/eduprov-science-course-information.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Science</label>
@@ -237,7 +237,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/blogs/technical.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/blogs/eduprov-technical-course-information.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20" id="back">Technical</label>
@@ -253,7 +253,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/blogs/school.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/blogs/eduprov-school-list-information.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20" id="back">Schools</label>
@@ -269,7 +269,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/blogs/colleges.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/blogs/eduprov-college-information.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20" id="back">Colleges</label>
