--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
   <link rel="apple-touch-icon" href="/images/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="service.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <link rel="preload" href="/webfontname" as="font" type="font/format" crossorigin>
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -163,7 +162,7 @@
                    <div class="card">
                       <div class="card-body">
                          <i class="fa fa-book"></i>
-                         <a href="https://eduprov.com/blogs/courses.html" style="text-decoration: none;"><h5 class="card-title text-dark" > Courses</h5></a>
+                         <a href="https://eduprov.com/blogs/eduprov-courses-list.html" style="text-decoration: none;"><h5 class="card-title text-dark" > Courses</h5></a>
                          <p class="card-text" id="card-font">information on courses and eligibility with career scope is mentioned.</p>
                       </div>
                    </div>
