EDUPROV: improv ui for all devices

--- a/course/bsc-horticulture-course.html
+++ b/course/bsc-horticulture-course.html
@@ -10,9 +10,9 @@
     content=" ">
   <meta name="author" content="Naveen">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
+  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="../dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="../faicon/css/all.css" />
   <link rel="stylesheet" href="../blog.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
