EDUPROV: 24-05-2021 : update font-family and  user interface

--- a/course/bsc-nautical-science-course.html
+++ b/course/bsc-nautical-science-course.html
@@ -52,6 +52,7 @@
   
   <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
   height: 350px;
+  padding:50px;
   background-position: center center;
   background-size: cover;">
 
@@ -69,10 +70,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center" id="tag-font">
-          <button class="btn btn-large  btn-primary text-white">
+        <h2 class="text-center text-primary" id="tag-font">
             Course Information
-          </button>
         </h2>
       </div>
     </div>
@@ -120,43 +119,37 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h2 class="text-center">
-                <button class="btn btn-large  btn-primary text-white" >
-                    ELIGIBILITY
-                </button>
+            <h2 class="text-center text-primary" id="tag-font">
+              Eligibility
             </h2>
         </div>
 
 
-        <div class="col-md-12">
+        <div class="col-md-12 mt-2">
           <ul>
-            <li><b>One who has passed 10+2 from a recognized board with a minimum of 50% in each subject and overall along
-                with the English language is eligible for this course. </b></li>
-            <li><b>The candidate should be in the age group of 17- 25 years.</b></li>
-            <li><b>Unlike other courses, this course has medical fitness as the eligibility condition. One who wants to
-                pursue this course should have a 6/6 score in eyesight and should not have deficiency such as color
-                blindness or night blindness. </b></li>
-            <li></li>
-  
+            <li>One who has passed 10+2 from a recognized board with a minimum of 50% in each subject and overall along
+                with the English language is eligible for this course.</li>
+            <li>The candidate should be in the age group of 17- 25 years.</li>
           </ul>
+          <p class="text-justify" id="paragraph-font">Unlike other courses, this course has medical fitness as the eligibility condition. One who wants to
+            pursue this course should have a 6/6 score in eyesight and should not have deficiency such as color
+            blindness or night blindness.</p>
           <p class="text-justify" id="paragraph-font">
-            <b>The candidate should also clear the entrance examination along with the medical examination. The
+              The candidate should also clear the entrance examination along with the medical examination. The
               information
               about the institutions where you can pursue this course can be obtained from the EDUPROV.
               The experts from EDUPROV will help you with all the aspects right from solving your queries in the
               admission procedure of
               getting into the course via counseling. We will be with you throughout the process when you approach
-              us.</b>
+              us.
           </p>
 
             <hr />
         </div>
 
         <div class="col-md-12">
-            <h2 class="text-center">
-                <button class="btn btn-large  btn-primary text-white" >
-                 Scope
-                </button>
+            <h2 class="text-center text-primary" id="tag-font">  
+               Scope
             </h2>
         </div>
         <div class="col-md-12">
@@ -182,8 +175,6 @@
 </div>
 <hr/>
 
-   
-<!--Footer Start-->
 
     <div class="container-fluid justify-content-center px-0">
       <footer>
@@ -192,20 +183,23 @@
             <ul class="list-unstyled mt-md-3 mt-5">
               <label style="font-weight: bold">Social Media</label>
               <li class="social">
-                <span>
-                  <i class="fab fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
-                <span>
-                  <i class="fab fa-instagram m-2 fa-1x" aria-hidden="true"></i>
-                </span>
-                <span>
-                  <i class="fab fa-twitter m-2 fa-1x" aria-hidden="true"></i>
-                </span>
+                  <span>
+                     <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
+                  <span>
+                     <a href="https://twitter.com/eduprov" #id="footer-url"class="text-white"> <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
+                  </span>
+                  <span>
+                     <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
+                  </span>
+                  <span>
+                    <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+                 </span>
               </li>
-            </ul>
+          </ul>
             <ul class="list-unstyled mt-md-3 mt-5">
               <label style="font-weight: bold">Address</label>
               <p>
-                Address: No 20 2nd Floor<br />
+                No 20 2nd Floor<br />
                 Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
                 560001
               </p>
@@ -283,22 +277,22 @@
           <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
             <ul class="list-unstyled">
               <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-              <a href="" style="text-decoration: none; color: white">
+              <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html" style="text-decoration: none; color: white">
                 <li>MBA</li>
               </a>
-              <a href="" style="text-decoration: none; color: white">
+              <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html" style="text-decoration: none; color: white">
                 <li>MEDICAL</li>
               </a>
-              <a href="" style="text-decoration: none; color: white">
+              <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html" style="text-decoration: none; color: white">
                 <li>ENGINEERING</li>
               </a>
-              <a href="" style="text-decoration: none; color: white">
+              <a href="https://eduprov.com/blogs/eduprov-law-course-information.html" style="text-decoration: none; color: white">
                 <li>LAW</li>
               </a>
-              <a href="" style="text-decoration: none; color: white">
+              <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html" style="text-decoration: none; color: white">
                 <li>DESIGNING</li>
               </a>
-              <a href="" style="text-decoration: none; color: white">
+              <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html" style="text-decoration: none; color: white">
                 <li>ARTS</li>
               </a>
             </ul>
