--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="stylesheet" href="style.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link rel="preload" href="/webfontname" as="font" type="font/format" crossorigin>
+  
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
@@ -97,9 +97,9 @@
       </div>
     </div>
 
-   <marquee >
-     <label id="marquee" class="text-danger">Entrance Exam and Online Counseling On Going</label>
-   </marquee>     
+    <marquee class=" bg-danger">
+      <p id ="marquee" class= "text-white mt-2" > Dear students India is battling a very threatening situation. Amidst all this chaos education shouldnt be left behind. Avail Online Career Counseling and Admission Guidance from Eduprov and get answers to all your queries!!! It's better to STAY HOME and STAY SAFE with your loved ones. Because unless everyone is safe no one is safe..!</p>
+    </marquee>      
   
 
   <section id="services" class="bg-light pt-100 pb-70">
