--- a/course/bachelor-of-education-course.html
+++ b/course/bachelor-of-education-course.html
@@ -138,19 +138,9 @@
                 Teaching is a respected profession in this country and also in the entire world. There is a demand for teachers both government and private sectors. After completion of B.Ed, candidates shall be entitled to get employment in secondary as well as higher secondary schools. With a B.Ed degree candidates can get jobs in Schools, Coaching Centers, Education consultancies, Education departments, private tuition, etc. The remuneration will be augmented with a decent experience and accomplishment in the field of education.
                </p>
             </div>
-        
-
-            <!--Table start-->
-
-            <!--Table End-->
         </div>
     </div>
     <hr/>
-
-    <!--Course End-->
-
-    <!--Footer Start-->
-
     <div class="container-fluid justify-content-center px-0">
         <footer>
             <div class="row justify-content-around mb-0 pt-5 mx-4">
@@ -252,22 +242,22 @@
                 <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
                     <ul class="list-unstyled">
                         <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-                        <a href="https://eduprov.com/mba.html" style="text-decoration: none; color: white">
+                        <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html" style="text-decoration: none; color: white">
                           <li>MBA</li>
                         </a>
-                        <a href="https://eduprov.com/medical.html" style="text-decoration: none; color: white">
+                        <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html" style="text-decoration: none; color: white">
                           <li>MEDICAL</li>
                         </a>
-                        <a href="https://eduprov.com/engineering.html" style="text-decoration: none; color: white">
+                        <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html" style="text-decoration: none; color: white">
                           <li>ENGINEERING</li>
                         </a>
-                        <a href="https://eduprov.com/law.html" style="text-decoration: none; color: white">
+                        <a href="https://eduprov.com/blogs/eduprov-law-course-information.html" style="text-decoration: none; color: white">
                           <li>LAW</li>
                         </a>
-                        <a href="https://eduprov.com/designing.html" style="text-decoration: none; color: white">
+                        <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html" style="text-decoration: none; color: white">
                           <li>DESIGNING</li>
                         </a>
-                        <a href="https://eduprov.com/arts-humanities.html" style="text-decoration: none; color: white">
+                        <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html" style="text-decoration: none; color: white">
                           <li>ARTS</li>
                         </a>
                       </ul>
