EDUPROV: 24-05-2021 : Beautify code

--- a/course/b-pharm-course.html
+++ b/course/b-pharm-course.html
@@ -39,9 +39,12 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
 
         <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-            <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-            <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
+              class="fa fa-home"></i> Home</a>
+          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
+              class="fa fa-phone-square"></i> Contact</a>
+          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
+              class="fa fa-user"></i> Student Form</a>
         </div>
       </div>
 
@@ -70,7 +73,7 @@
     <div class="row">
       <div class="col-md-12 mt-2">
         <h2 class="text-center text-primary" id="tag-font">
-            Course Information
+          Course Information
         </h2>
       </div>
     </div>
@@ -80,13 +83,13 @@
     <div class="row">
       <div class="col-md-12">
         <p class="text-justify" id="paragraph-font">
-         <b>Bachelor of Pharmacy (B Pharm)</b> is a four-year undergraduate program in which students study the
+          <b>Bachelor of Pharmacy (B Pharm)</b> is a four-year undergraduate program in which students study the
           methods
           and process of preparing drugs and how does the dispensing of medicine and drugs take place.
           Pharmacy
           is an excellent choice of course for students interested in medicine, the making, production, composition,
           and medical research or pharmaceutical research. There are several courses in science stream and
-            medical
+          medical
           stream but Bachelor of Pharmacy or B Pharma as it is commonly known as an extremely opportunistic course for
           students who are focused in the sciences and like the direct aspect of change it brings.
         </p>
@@ -100,7 +103,7 @@
         <p class="text-justify" id="paragraph-font">
           A development that is showing a great impact on the world in terms of growth is now simply reflecting the
           adverse impact onhuman health.Earlier the people used to say ‘health is wealth’, but now
-         wealth is only
+          wealth is only
           synonymous with wealth, the term ‘health’ is gone. The health is deteriorating and people nowadays
           don't have the
           time to spend time in consulting about health. So, there is a great requirement of the Pharmacist, who can
@@ -117,34 +120,40 @@
     <div class="row">
       <div class="col-md-12 mt-2">
         <h2 class="text-center  text-primary" id="tag-font">
-            Eligibility
+          Eligibility
         </h2>
       </div>
 
       <div class="col-md-12 mt-2">
 
-       <p class="text-justify" id="paragraph-font">
-        Apply for the state CET exam. Example, Karnataka students shall apply for KCET.Attempt the exam for PCB or PCM or PCMB subjects depending on the subjects you took in 11th and 12th.
-       </p>
+        <p class="text-justify" id="paragraph-font">
+          Apply for the state CET exam. Example, Karnataka students shall apply for KCET.Attempt the exam for PCB or PCM
+          or PCMB subjects depending on the subjects you took in 11th and 12th.
+        </p>
+
         <ul>
-        <li>The ranks formed will be on the basis of your best PCM or PCB marks.</li>
-        <li> Decide which college is the best for your ranking and select it during the counseling rounds held by KCET</li>
-          <li>If opting for this course at the undergraduate level, one needs to have the passing certificate of High  school and Intermediate, 10+2 or PUC.
-            </li>
-          <li>The student must have had either physics, chemistry and mathematics or physics, chemistry and biology
-              subjects in 11th and 12th. This means that this course is for both PCM and PCB students stream from a
-              recognized board, with an aggregate of 50%.
-            </li>
-          <li>Students wishing to get a seat in B pharmacy through government quota seats must compulsorily give CET
-              exams of their respective courses. But, there are other private college and university entrance exams for
-              B Pharma. Read along to find out more about the procedures and different entrance exams for B Pharmacy
-              course. Even direct admissions or management quota admissions are also possible in few colleges.
-            </li>
-          <li>If opting for this course at the post-graduate level, one needs to have an aggregate of 50% marks in biology at the undergraduate level from a recognized university.</li>
+          <li>The ranks formed will be on the basis of your best PCM or PCB marks.</li>
+          <li> Decide which college is the best for your ranking and select it during the counseling rounds held by KCET
+          </li>
+          <li>If opting for this course at the undergraduate level, one needs to have the passing certificate of High
+            school and Intermediate, 10+2 or PUC.</li>
+          <li>If opting for this course at the post-graduate level, one needs to have an aggregate of 50% marks in
+            biology at the undergraduate level from a recognized university.</li>
           <li>The minimum age required is 17 years old.</li>
+        </ul>
+        <p class="text-justify" id="paragraph-font">
+          The student must have had either physics, chemistry and mathematics or physics, chemistry and biology
+          subjects in 11th and 12th. This means that this course is for both PCM and PCB students stream from a
+          recognized board, with an aggregate of 50%.
+        </p>
+        <p class="text-justify" id="paragraph-font">
+          Students wishing to get a seat in B pharmacy through government quota seats must compulsorily give CET
+          exams of their respective courses. But, there are other private college and university entrance exams for
+          B Pharma. Read along to find out more about the procedures and different entrance exams for B Pharmacy
+          course. Even direct admissions or management quota admissions are also possible in few colleges.
+        </p>
 
-
-          <hr />
+        <hr />
       </div>
 
       <hr />
@@ -153,7 +162,7 @@
     <div class="row">
       <div class="col-md-12">
         <h3 class="text-center text-primary" id="tag-font">
-            Top Colleges
+          Top Colleges
         </h3>
       </div>
 
@@ -165,10 +174,10 @@
           <li>Al-Ameen College of Pharmacy Bangalore</li>
           <li>St. Johns College of Pharmacy Bangalore</li>
           <li>T. John College of Pharmacy Bangalore</li>
-          <li>The Oxford College of  Pharmacy Bangalore</li>
-          <li>V.V. Puram Institute  of Pharmaceutical Sciences Bangalore</li>
+          <li>The Oxford College of Pharmacy Bangalore</li>
+          <li>V.V. Puram Institute of Pharmaceutical Sciences Bangalore</li>
           <li>Vivekananda College of Pharmacy Bangalore</li>
-          <li>Aditya Bangalore  Institute of Pharmacy Education and Research Center Bangalore</li>
+          <li>Aditya Bangalore Institute of Pharmacy Education and Research Center Bangalore</li>
           <li>K R College of Pharmacy Bangalore</li>
           <li>East West College of Pharmacy Bangalore</li>
           <li>East Point College of Pharmacy Bangalore</li>
@@ -191,7 +200,7 @@
     <div class="row">
       <div class="col-md-12">
         <h3 class="text-center text-primary" id="tag-font">
-            B.Pharm Colleges in Karnataka
+          Colleges in Karnataka
         </h3>
       </div>
 
@@ -249,7 +258,7 @@
 
     <div class="col-md-12">
       <h4 class="text-center  text-primary" id="tag-font">
-         Career & Scope
+        Scope
       </h4>
     </div>
 
@@ -265,12 +274,12 @@
         pharmacist, who can tell the people about the extensive medicines that don’t take their enough time
         and they can work continuously after taking it. Hence, the demand is quite high, only the people who
         learn with hard work and dedication can have a bright future in this line.
-
       </p>
+
       <p class="text-justify" id="paragraph-font">
-       After BPharm, students are offered various employment opportunities in the pharmacy sector. They can
+        After BPharm, students are offered various employment opportunities in the pharmacy sector. They can
         open their own pharmacy by registering themselves under State Pharmacy Council. They can work in different
-         fields.
+        fields.
       </p>
       <ul>
         <li>Analytic Chemist</li>
@@ -289,21 +298,12 @@
 
 
   </div>
-  <!--Table End-->
-
-
 
   </div>
-  <!--container end-->
+
   </div>
 
 
-
-  <!--Table End-->
-
-  <!--Course End-->
-
-  <!--Footer Start-->
 
   <div class="container-fluid justify-content-center px-0">
     <footer>
@@ -312,23 +312,27 @@
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
-                <span>
-                   <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
-                <span>
-                   <a href="https://twitter.com/eduprov" #id="footer-url"class="text-white"> <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
-                </span>
-                <span>
-                   <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
-                </span>
-                <span>
-                  <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
-               </span>
+              <span>
+                <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i
+                    class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
+              <span>
+                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                    class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                    class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url"
+                  class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
             </li>
-        </ul>
+          </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-               No 20 2nd Floor<br />
+              No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -406,22 +410,28 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html"
+              style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html"
+              style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html"
+              style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-law-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-law-course-information.html"
+              style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html"
+              style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html"
+              style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
