--- a/blogs/eduprov-medical-course-information.html
+++ b/blogs/eduprov-medical-course-information.html
@@ -316,7 +316,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4">
+       <!-- <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
             <a href="https://eduprov.com/course/md-ayurveda-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
@@ -331,7 +331,7 @@
               </div>
             </a>
           </div>
-        </div>
+        </div>-->
       </div>
     </div>
   </section>
