EDUPROV: 29-05-2021 update ui

--- a/course/btech-in-naval.html
+++ b/course/btech-in-naval.html
@@ -174,11 +174,11 @@
         <div class="col-md-12">
             <p class="text-justify" id="paragraph-font">
                 After grabbing the degree the work scope has a wide range. A person is liable to work in 
-                <b>government sectors, teaching, Ocean Engineers, Corporate, Naval Architectural work, and 
-                private sectors.</b> The scope is also open for <b>designing, building, drawing, and construction 
-                works.</b> Other works include being on the ship and looking for any repairing work that has 
+                government sectors, teaching, Ocean Engineers, Corporate, Naval Architectural work, and 
+                private sectors. The scope is also open for designing, building, drawing, and construction 
+                works.Other works include being on the ship and looking for any repairing work that has 
                 to be done on the spot. The most common job is to work as a consultant by working as a 
-                <b>freelancer.</b>
+                freelancer.
 
 
             </p>
